# GenesisEngine

./: .gitignore  README.md  TODOS.md  meson.build
include/GenesisEngine/: GenApp.hpp
include/GenesisEngine/Core/GameObject/: GenGameObject.hpp
include/GenesisEngine/Core/Primitives/: GenBasic.hpp  GenLine.hpp  GenPoint.hpp
include/GenesisEngine/Core/Scene/: GenLayer.hpp  GenScene.hpp
include/GenesisEngine/GenesisSurface/: GenSurface.hpp
src/: main.cpp  meson.build
src/GenesisEngine/: GenApp.cpp  GenApp_OnCleanup.cpp  GenApp_OnEvent.cpp  GenApp_OnInit.cpp  GenApp_OnLoop.cpp  GenApp_OnRender.cpp  meson.build
src/GenesisEngine/Core/GameObject/: GenGameObject.cpp
src/GenesisEngine/Core/Primitives/: GenLine.cpp  GenPoint.cpp
src/GenesisEngine/Core/Scene/: GenLayer.cpp  GenScene.cpp
src/GenesisEngine/GenesisSurface/: GenSurface.cpp
